fix alignment for job cards

--- a/style.css
+++ b/style.css
@@ -63,6 +63,7 @@ input::-webkit-inner-spin-button {
 /* margin: 5%; must be half of '100% - width' */
 
 .titletohide {
+  font-family: 'Prompt', sans-serif;
   display: block;
   margin-left: auto;
   margin-right: auto;
@@ -361,4 +362,14 @@ p {
 
 .tutorial {
   border: 2px solid #333;
+}
+
+img {
+  border-radius: 15px;
+}
+
+.hidden-card {
+  width: 324px;
+  visibility: hidden;
+  height: 0;
 }
